2002-11-06  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (cb_clear_rendered_values) : new.
	(sheet_range_calc_spans) : this should be renamed eventually.
	  It no longer calculates the spans, rather it just honours the flags
	  and queues the respan or render as necessary.
	(sheet_clear_region) : just queue things.

	* src/sheet-merge.c (sheet_merge_add) : do it the easy way and just
	  queue all the rows for respan.  No need to do all the work to work
	  out this set.

	* src/clipboard.c (clipboard_paste_region) : just flag the render/span
	  it will happen when necessary.

2002-11-06  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_exppow_pdf): Use lgammagnum, not lgamma.
	(combin): Ditto.
	(permut): Ditto.
	(fact): Ditto.

2002-11-06  Jody Goldberg <jody@gnome.org>

	* src/item-*, src/*canvas* : convert to foocanvas

	* src/application.c (gnumeric_application_setup_icons) : Use new
	  scaled pngs for formula guru.
	* src/pixmaps/Makefile.am : ditto.

	* src/plugin.c (plugin_info_read) : add 'require_explicit_enabling' flag
	  so that we don't auto enable specialized plugins.

	* src/plugin-service.c (input_file_save_info_read) : delete.
	(plugin_service_file_opener_read_xml) : don't call it here.
	(gnum_plugin_file_opener_open) : And don't try to use it here.
	  It is not useful to hard code the saver if the importer can handle
	  multiple versions of the format.  Only the import process will know
	  enough to be able to select the appropriate exporter.

	* src/item-cursor.c (item_cursor_tip_setlabel) : simplify.
	* src/auto-format.c : tidy up includes.

2002-11-06   Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* src/stf.c (stf_init) : text export is lossy too. (78356)
	
2002-11-06   Andreas J. Guelzow  <aguelzow@taliesin.ca>
	
	http://bugzilla.gnome.org/show_bug.cgi?id=78356
	* src/workbook-view.c (wb_view_save_as) : don't mark the
	  workbook clean unless we saved under the new name.

2002-11-06  Jon K Hellan  <hellan@acm.org>
