@@ -3,6 +3,7 @@
 	<information>
 		<_name>CORBA Interface</_name>
 		<_description>Provides a CORBA scripting interface</_description>
+		<require_explicit_enabling/>
 	</information>
 	<loader type="Gnumeric_Builtin:module">
 		<attribute name="module_file" value="corba.la"/>
