@@ -3,6 +3,7 @@
 	<information>
 		<_name>Gnome Glossary</_name>
 		<_description>It provides support for saving Gnome Glossary in .po files.</_description>
+		<require_explicit_enabling/>
 	</information>
 	<loader type="Gnumeric_PythonLoader:python">
 		<attribute name="module_name" value="gnome_glossary"/>
