@@ -3,6 +3,7 @@
 	<information>
 		<_name>Guile Plugin</_name>
 		<_description>This plugin enables Guile(scheme) support in Gnumeric</_description>
+		<require_explicit_enabling/>
 	</information>
 	<loader type="Gnumeric_Builtin:module">
 		<attribute name="module_file" value="guile.la"/>
