@@ -3,6 +3,7 @@
 	<information>
 		<_name>Python plugin loader</_name>
 		<_description>This plugin provides support for Python plugins</_description>
+		<require_explicit_enabling/>
 	</information>
 	<loader type="Gnumeric_Builtin:module">
 		<attribute name="module_file" value="python_loader.la"/>
