@@ -3,6 +3,7 @@
 	<information>
 		<_name>Sample DataSource</_name>
 		<_description>A proof of concept external data source</_description>
+		<require_explicit_enabling/>
 	</information>
 	<loader type="Gnumeric_Builtin:module">
 		<attribute name="module_file" value="sample_datasource.la"/>
