@@ -18,6 +18,7 @@ Jody
 	* Have the importer designate the exporter directly
 	* Switch to foocanvas for performance
 	* Just in time rendering for clipboard
+	* Add 'require_explicit_enable' for plugins
 
 Morten:
 	* Spelling fixes all over.
